# FileCryptor

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  README.md  main.cpp
include/: colors.hpp  file_ec_dc.hpp  file_encryptor_decryptor.hpp  json_reader.hpp  json_writer.hpp  key_generator.hpp  my_assert.hpp  random_key_gen.hpp  shell.hpp
src/: file_ec_dc.cpp  file_encryptor_decryptor.cpp  json_reader.cpp  json_writer.cpp  key_generator.cpp  main.cpp  random_key_gen.cpp  shell.cpp
